[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-datetime-picker"
version = "0.0.1"
authors = [
    { name = "Nathan Chen", email = "nathan.chen.198@gmail.com" }
]
description = "Streamlit Date and Time Picker"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/NathanChen198/streamlit-datetime-picker"
Issues = "https://github.com/NathanChen198/streamlit-datetime-picker/issues"